--- a/render.yaml
+++ b/render.yaml
@@ -2,8 +2,8 @@ services:
   - type: web
     name: sperm-analysis
     env: python
-    # Git LFS kurulumu ve model dosyalarının indirilmesi için build command
-    buildCommand: pip install git-lfs && git lfs install && git lfs pull && pip install -r requirements.txt
+    # Model dosyalarını cloud storage'dan indir ve paketleri yükle
+    buildCommand: pip install requests && python download_models.py && pip install -r requirements.txt
     startCommand: gunicorn app:app
     envVars:
       - key: PYTHON_VERSION
